添加重载指令

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,4 +5,4 @@ api-version: '1.18'
 description: '空岛插件:水流与岩浆交汇生成矿石'
 author: ['Katacr', '小晓']
 qq: 614401508
-github: ''
+github: 'https://github.com/Katacr/KaGeneration'
