--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,6 +18,9 @@ permissions:
   kageneration.reload:
     description: 允许重载插件
     default: op
+  kageneration.info:
+    description: 允许查看插件配置信息
+    default: true
   kageneration.level1:
     description: 使用等级1矿石生成
     default: false
