添加英文翻译

--- a/build.gradle
+++ b/build.gradle
@@ -67,4 +67,7 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+    from('src/main/resources') {
+        include '**/*.yml'
+    }
 }
