--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,26 +1,28 @@
-# KaGeneration 矿石生成配置
-# 注意：每个组所有矿石的概率合计应为 100 ！
-Language: "en_US"
+# KaGeneration config
+# 注意：每个组所有矿石的概率合计应为 100!
+# Note: The total probability of all ores in each group should be 100!
+
+Language: "en_US"    # Available languages: zh_CN, en_US
 
 Setting:
-  get_lava_bucket: false  # 是否启用空桶右键黑曜石转换岩浆桶
-  allow_water_in_nether: false  # 是否允许在下界放置水桶
-  generate_water_from_ice: true  # 是否允许在下界破坏冰块生成水源
+  get_lava_bucket: false  # 是否启用空桶右键黑曜石转换岩浆桶 | Whether to enable converting obsidian to lava bucket by right-clicking with an empty bucket
+  allow_water_in_nether: false  # 是否允许在下界放置水桶 | Whether to allow placing water buckets in the Nether
+  generate_water_from_ice: true  # 是否允许在下界破坏冰块生成水源 | Whether to allow generating water sources by breaking ice in the Nether
 
-# 世界白名单（仅在这些世界生效）
+# 世界白名单（仅在这些世界生效） | World Whitelist (Only effective in these worlds)
 World:
   - skyblock
   - skyblock_world
 
 Generation:
-  # 默认组（没有权限时使用）
+  # 默认组（没有权限时使用） | Default group (used when no permission)
   default:
-    priority: 0  #优先级
+    priority: 0  #优先级 | Priority
     iron_ore: 3
     coal_ore: 5
     stone: 92
 
-  # 等级1 - 需要权限 kageneration.level1
+  # 等级1 - 需要权限 kageneration.level1 | Level 1 - Requires permission: kageneration.level1
   level1:
     priority: 1
     diamond_ore: 5
@@ -28,7 +30,7 @@ Generation:
     coal_ore: 15
     stone: 70
 
-  # 等级2 - 需要权限 kageneration.level2
+  # 等级2 - 需要权限 kageneration.level2 | Level 2 - Requires permission: kageneration.level2
   level2:
     priority: 2
     diamond_ore: 10
@@ -36,7 +38,7 @@ Generation:
     coal_ore: 15
     stone: 60
 
-  # 等级3 - 需要权限 kageneration.level3
+  # 等级3 - 需要权限 kageneration.level3 | Level 3 - Requires permission: kageneration.level3
   level3:
     priority: 3
     diamond_ore: 15
@@ -45,3 +47,4 @@ Generation:
     stone: 45
 
   # 等级理论可无限添加，但优先级不允许相同，当拥有多个级别权限时，优先级最高的生效。
+  # Levels can theoretically be added infinitely, but priorities must be unique. When having multiple level permissions, the one with the highest priority takes effect.
