--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,7 @@
 # 注意：每个组所有矿石的概率合计应为 100!
 # Note: The total probability of all ores in each group should be 100!
 
-Language: "en_US"    # Available languages: zh_CN, en_US
+Language: "en_US"    # 内置语音文件 zh_CN, en_US | Available languages: zh_CN, en_US
 
 Setting:
   get_lava_bucket: false  # 是否启用空桶右键黑曜石转换岩浆桶 | Whether to enable converting obsidian to lava bucket by right-clicking with an empty bucket
@@ -10,9 +10,13 @@ Setting:
   generate_water_from_ice: true  # 是否允许在下界破坏冰块生成水源 | Whether to allow generating water sources by breaking ice in the Nether
 
 # 世界白名单（仅在这些世界生效） | World Whitelist (Only effective in these worlds)
-World:
-  - skyblock
-  - skyblock_world
+World:              # 留空[]则所有世界启用  | Fill in [] to enable all worlds
+  - "skyblock"      # 直接匹配 #Directly match
+ # - ".*_nether"      # 正则表达式匹配(名称以_nether结尾的世界) | Regular expression matching (world names ending in "_nether")
+ # - "resource_.*"     # 正则表达式匹配(名称以resource_开头的世界) | Regular expression matching (world names starting with "resource_")
+ # - ".*island.*"      # 正则表达式匹配(名称包含island的世界) | Regular expression matching (world with name including "island")
+ # - "!pvp_arena"       # 正则表达式匹配(排除名称pvp_arena的世界) | Regular expression matching (excluding worlds with the name "pvp-arena")
+
 
 Generation:
   # 默认组（没有权限时使用） | Default group (used when no permission)
