ItemsAdder block support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,11 @@
 name: KaGeneration
-version: '1.1'
+version: '1.2'
 main: org.katacr.kaGeneration.KaGeneration
 api-version: '1.18'
 description: '空岛插件:水流与岩浆交汇生成矿石'
 author: ['Katacr', '小晓']
 qq: 614401508
+softdepend: [ItemsAdder]
 github: 'https://github.com/Katacr/KaGeneration'
 
 commands:
