--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'org.katacr'
-version = '1.1'
+version = '1.2'
 
 repositories {
     mavenCentral()
@@ -24,12 +24,17 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "matteodev"
+        url = "https://maven.devs.beer/"
+    }
 }
 
 dependencies {
     compileOnly("org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT")
     compileOnly('org.jetbrains:annotations:24.0.1')
     compileOnly('me.clip:placeholderapi:2.11.6')
+    compileOnly('dev.lone:api-itemsadder:4.0.10')
 }
 
 tasks {
