--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,9 +10,9 @@ Setting:
   generate_water_from_ice: true  # 是否允许在下界破坏冰块生成水源 | Whether to allow generating water sources by breaking ice in the Nether
 
 Sound:
-  lava_bucket: "ITEM_BUCKET_FILL_LAVA"
-  water_in_nether: "ITEM_BUCKET_EMPTY"
-  ice_to_water: "BLOCK_GLASS_BREAK"
+  lava_bucket: "ITEM_BUCKET_FILL_LAVA"  # 黑曜石转换岩浆的音效
+  water_in_nether: "ITEM_BUCKET_EMPTY"  # 下界放置水桶的音效
+  ice_to_water: "BLOCK_GLASS_BREAK"   # 破坏冰块生成水源的音效
 
 # 世界白名单（仅在这些世界生效） | World Whitelist (Only effective in these worlds)
 World:              # 留空[]则所有世界启用  | Fill in [] to enable all worlds
